S12P21A303-80-Feat: 주간 조회시 황금 민들레 개수 포함 X